test/tests/stages/18_structures/invalid_parse/extra_credit/two_union_kws.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  union
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  union
  union
  identifier(u)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
